[package]
name = "rando"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
ron = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
super-metroid = { path = "../super-metroid" }
