[package]
name = "super-metroid"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2018"

[features]
default = []
render = ["image"]

[dependencies]
byteorder = "1"
failure = "0.1.6"
num = "0.2"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }

image = { version = "0.22.4", optional = true }
